19 August 2024 v548: Fixed: When scrolling some tables (translations and humans) the table headers were badly readable, as they had no background and the rows were visible behind the header.

--- a/main.css
+++ b/main.css
@@ -1318,7 +1318,11 @@ h2, .pageSubTitleFont, .sectionTitle {
   text-align: center;
 }
 
- .dataTable input[type='checkbox']{
+.tableWhiteHeader th {
+  background-color: #ffffff;
+}
+
+.dataTable input[type='checkbox']{
   margin: 0 2px;
 }
 
